Wip rotateable heat exchange areas

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -7,8 +7,12 @@ unit.hollow-frostscape-ghoul.description = Shoots a of spread shots, explodes an
 unit.hollow-frostscape-ghoul.details = A hefty surpression unit, often used to trigger other Swarmer's effects.
 
 unit.hollow-frostscape-manta.name = Manta
-unit.hollow-frostscape-manta.description = Pelts areas with lightly homing shots which pierce a single target. Very manuverable. Does damage when ramming targets.
+unit.hollow-frostscape-manta.description = Pelts areas with lightly homing shots which pierce a single target. Very maneuverable. Does damage when ramming targets.
 unit.hollow-frostscape-manta.details = Remodeled hauler capible of combat. Would've lived out a life as a drill otherwise.
+
+unit.hollow-frostscape-flyfish.name = Flyfish
+unit.hollow-frostscape-flyfish.description = Explodes into a stream of flame, capable of piercing through blocks and armor alike. Very maneuverable. Does damage when ramming targets.
+unit.hollow-frostscape-flyfish.details = Explosives and thermite stuck onto a wheel with thrusters. Who would've thought a wheeled missile would be a thing.
 
 unit.hollow-frostscape-andon.name = Andon
 unit.hollow-frostscape-andon.description = Shells targets, and launches interceptor missiles at incoming projectiles
