--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,3 +1,4 @@
+## UNITS
 unit.hollow-frostscape-cord.name = Cord
 unit.hollow-frostscape-cord.description = Blasts out dehabilatating buckshot rounds at enemy targets, applying a stacking slowing effect. Releases an angled blast of fragments on destruction.
 unit.hollow-frostscape-cord.details = A simple patrol unit often found supporting its buddies. Whenever facing one, targets often find themselves stuck in a bind.
@@ -30,6 +31,7 @@ unit.hollow-frostscape-stalagmite.name = Stalagmite
 unit.hollow-frostscape-stalagmite.description = Pressurises and launches rapid jets of water at enemy targets. Pressure rises proportionally to speed. Travels between bodies of water with a toggleable engine.
 unit.hollow-frostscape-stalagmite.details = Hi I'm Derek Bum, Say Goodbye to Daily Stains and Dirty Surfaces with New Kitchen Gun. This Sink is filthy, but Just 3 Shots from Kitchen Gun, BANG BANG BANG! And it Sparkles like Neeeeeeew! Look how it cleans this greasy hob, BANG BANG BANG! GOODBYE DIRT!!! Grubby Tiles, BANG BANG BANG! I LOVE YOU KITCHEN GUN *Kisses gun* Rusty Taps, BANG BANG BANG! AHAHAHAHAHA You Can Even Use it on the Washing up! BANG BANG BANG! There, all clean agaaain! NEW Kitchen Gun, Now with Laser Sight and Night Vision for After Dark Cleaning!!
 
+## MESSAGES
 block.spawn.description = DANGER, ANNIHILATION IMMINENT\nLEAVE DROP ZONE IMMIDIEATELY
 block.spawn.details = Wtf are you doing scanning spawns.
 
@@ -41,7 +43,7 @@ block.air.details = mmm 20% unit engine exhaust\nb r e a t h e s       a   g r  
 
 block.hollow-frostscape-volcanic-andesite-floor.env-category = Volcanic
 
-
+## BLOCKS
 block.hollow-frostscape-grating.name = Grating
 block.hollow-frostscape-grating.env-category = Complex
 block.hollow-frostscape-plating.name = Plating
@@ -58,7 +60,6 @@ block.hollow-frostscape-plating-cross.name = Plating Cross
 block.hollow-frostscape-plating-cross.env-category = Complex
 block.hollow-frostscape-socket.name = Socket
 block.hollow-frostscape-socket.env-category = Complex
-
 
 block.hollow-frostscape-grating-rusty.name = Rusty Grating
 block.hollow-frostscape-grating-rusty.env-category = Complex
@@ -134,6 +135,7 @@ block.hollow-frostscape-item-plug-large.name = Large Item Plug
 block.hollow-frostscape-item-plug-large.description = Stockpiles half its inventory with some margin. Interfaces with a sector's item bank. Greater buffer size and speed than a regular plug, but longer startup speed.
 block.hollow-frostscape-item-plug-large.details = Ate too many wires and became a zenner diode.
 
+## ITEMS
 item.hollow-frostscape-rust.name = Rust
 item.hollow-frostscape-rust.description = Pieces of iron scrap metal commonly extracted from wreckage and decayed structures, or occasionally from the ground.\nThe parts and rebar in most low-tech buildings.
 item.hollow-frostscape-rust.details = This piece of chocolate is surprisingly bitter. Has a very pixely origin.
@@ -222,6 +224,7 @@ item.hollow-frostscape-gel.name = Gel
 item.hollow-frostscape-gel.description = Viscus ball of binding agents. Very versatile.
 item.hollow-frostscape-gel.details = SLIMEBALL
 
+## STATUSES
 status.hollow-frostscape-napalm.name = Napalm
 status.hollow-frostscape-napalm.description = Turns burning into instant damage.
 status.hollow-frostscape-napalm.details = Wait why did we stop using this again?
@@ -235,14 +238,17 @@ status.hollow-frostscape-conflex.name = Conflex
 status.hollow-frostscape-conflex.description = Slows the affected systems down proportional to its duration. Stacks with itself. Less effective against larger units. Durations high enough disarm affected targets.
 status.hollow-frostscape-conflex.details = The inverse of a reflex in graph theory would have a con, so conflex was born out of cursed math naming!
 
+## UPGRADES
 upgrade.hollow-frostscape-improved-base-landmine.name = Improved Base(Landmines)
 upgrade.hollow-frostscape-improved-payload-landmine.name = Improved Payload(Landmines)
 upgrade.hollow-frostscape-always-armed-landmine.name = Always Armed(Landmines)
 
+## FLOORS
 block.hollow-frostscape-mafic-floor.name = Mafic Floor
 block.hollow-frostscape-mafic-stone.name = Mafic Stone
 block.hollow-frostscape-mafic-boulder.name = Mafic Boulder
 
+## SETTINGS
 settings.frostscape-title = Frostscape
 settings.frostscape-parallax = Parallax
 settings.frostscape-wind-visual-force = Wind Visual Force
@@ -278,6 +284,7 @@ category.family = Family
 category.scanning = Scanning
 category.scanning.vanilla = Vanilla
 
+## DIALOUGES
 dialog.SCHsettings = Map Controller
 dialog.database-entries = Extras
 dialog.database-entries.info0 = Welcome to the database extension!\nThe buttons at the bottom will change the [accent]contents[] of this dialog.
@@ -287,6 +294,7 @@ dialog.database-entries.info1 = [sky]B L I N D I N G  L I G H T
 dialog.database-entries.info2 = [red]F O R E V E R  T R A P P E D  I N  T H I S  D A M M  D I A L O G . . .
 dialog.database-entries.info3 = [#f5bf79]A C H I E V E  E N L I G H T E N M E N T.
 
+## NAMES
 family.hollow-frostscape-assault.name = Assault
 family.hollow-frostscape-assault.description = A family of units designed to deal damage to targets, and siege fortifications.
 family.hollow-frostscape-assault.details = [#ffa465]Assaults[] are usually your generic fighter unit which shouldn't be too difficult to handle in isolation. They will often come with supporting unit family types.\n\nSpecialized assault units may be much tankier than other units, have more armor or more dps. They are overall your go-to choice when unsure about which tactic will work best against an unknown, fortified outpost.
@@ -310,7 +318,6 @@ family.hollow-frostscape-swarm.details = [#f0725c]Swarmers[] are best used to ov
 family.hollow-frostscape-gelid.name = Gelid [red](WIP)[]
 family.hollow-frostscape-gelid.description = A family of units designed around temperature resistance, and self-preservation.
 family.hollow-frostscape-gelid.details = [#f4e888]Gelids[] are distinct from other families with their sheer self-preservation abilities.\n\nThey make great scouts in extreme climates, and can tank great amounts of damage before going down. Most also have regenerating hulls\n\nSpecialized [#f4e888]Gelids[] should be used alongside [#83f490]Supports[] when building forts in hostile environments.
-
 
 #wip
 controller.default.name = Default Controller
